# telugu_cat_ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  ai_services.py  app.py  config.py  database.py  news_service.py  pyproject.toml  requirements.txt  utils.py
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md
.gitlab/merge_request_templates/: Bug.md  Default.md  Documentation.md  Feature.md
.streamlit/: config.toml
assets/: style.css
